[package]
name = "matrix-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="*"

flame-client = { path = "../../../client/rust" }

tokio = { workspace = true }
tonic = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

futures = "0.3"
chrono = "0.4"

serde_json = "1"
serde = {version="1", features = ["derive"]}

clap = { workspace = true, features = ["derive"] }
